[package]
name = "jsonrpc-ring"
version = "0.1.0"
authors = ["Rutaihwa <rutaihwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
jsonrpc-core = "4.0"
jsonrpc = { git = "https://github.com/apoelstra/rust-jsonrpc" }
jsonrpc-http-server = "14.0"
log = "0.4"
env_logger = "0.6"
serde = "1.0"
serde_derive = "1.0"